# Doc-RAG-K8s

./: .gitignore  README.md  Steps-up.txt  docker-compose.yml  promptfooconfig.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  locustfile.py  pyproject.toml  requirements.txt  run.sh  vercel.json
backend/app/: main.py
backend/app/api/v1/: auth.py  documents.py  health.py  router.py  sessions.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: schemas.py
backend/app/services/: agent.py  chat_history.py  embeddings.py  llm.py  mlflow_tracker.py  sparse_encoder.py  vector_store.py  weather.py
backend/docs/: MIGRATION_GUIDE.md  SUMMARY.md
backend/notebook/: backend_complete_backup.ipynb  backend_full.ipynb  rag_pipeline.ipynb
backend/research/: raw code.py  test.py
backend/scripts/: check_types.py  check_users.py  create_demo_user.py  init_db.py  init_neon_db.py  migrate_db_binary.py  migrate_feedback.py  run_test_client.py  setup_reset_table.py  setup_view_tokens.py  test_bcrypt.py  test_bm25.py  test_clean.py  test_clean_v2.py  test_http.py
backend/tests/: test_api.py  test_auth.py
database/: neon_setup.sql  supabase_setup.sql
frontend/: .dockerignore  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.js  (+1 more)
grafana/dashboards/: docchat_dashboard.json
k8s/: backend.yaml  configmap.yaml  db-migration-config.yaml  db-migration-job.yaml  frontend.yaml  hpa.yaml  k8s-instructions.txt  keda.yaml  mlflow.yaml  monitoring.yaml  nginx.yaml  postgres.yaml  qdrant.yaml  secrets.yaml.example  vpa.yaml
mlflow/: mlflow.db
nginx/: nginx.conf
prometheus/: prometheus.yml
prompts/: system_prompt.txt
(+11 files in other folders)
